меню для мобилы

--- a/resources/sass/land-agricultural.scss
+++ b/resources/sass/land-agricultural.scss
@@ -22,6 +22,7 @@
 
             @media #{$small-and-down} {
                 top: -3rem;
+                text-align: center;
             }
         }
     }
