--- a/resources/sass/menu.scss
+++ b/resources/sass/menu.scss
@@ -48,7 +48,10 @@ nav {
 
 // Меню мобилки
 .sidenav li > a {
-    height: auto;
+    display: flex;
+    align-items: center;
+    min-height: 48px;
+    line-height: 24px;
 
     &.active {
         background-color: rgba(0, 0, 0, 0.1);
