меню для мобилы - закрытие при сабмите

--- a/resources/sass/form.scss
+++ b/resources/sass/form.scss
@@ -13,7 +13,11 @@
         color: #fff;
     }
 
-    input {
+    input, textarea {
         color: #fff;
+    }
+
+    #form-input-text {
+        max-width: 70%;
     }
 }
