--- a/resources/admin/src/app/app.component.html
+++ b/resources/admin/src/app/app.component.html
@@ -3,15 +3,15 @@
   <mat-sidenav #sidenav>
     <div class="logo-nav-container">
       <mat-nav-list>
-        <a mat-list-item [routerLink]="'/'" [routerLinkActive]="'activate'" [routerLinkActiveOptions]="{exact:true}">
+        <a mat-list-item [routerLink]="'/'" [routerLinkActive]="'activate'" [routerLinkActiveOptions]="{exact:true}" (click)="sidenav.toggle()">
           <mat-icon matListIcon>add</mat-icon>
           <span>Создание земли</span>
         </a>
-        <a mat-list-item [routerLink]="'/edit-land'" [routerLinkActive]="'activate'" [routerLinkActiveOptions]="{exact:true}">
+        <a mat-list-item [routerLink]="'/edit-land'" [routerLinkActive]="'activate'" [routerLinkActiveOptions]="{exact:true}" (click)="sidenav.toggle()">
           <mat-icon matListIcon>border_color</mat-icon>
           <span>Редактирование земель</span>
         </a>
-        <a mat-list-item [routerLink]="'/edit-settings'" [routerLinkActive]="'activate'" [routerLinkActiveOptions]="{exact:true}">
+        <a mat-list-item [routerLink]="'/edit-settings'" [routerLinkActive]="'activate'" [routerLinkActiveOptions]="{exact:true}" (click)="sidenav.toggle()">
           <mat-icon matListIcon>build</mat-icon>
           <span>Настройки отображения</span>
         </a>
